[provision-status-component] - Add client to retrieve project component status.
